2000-11-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* guile-config.in (display-line-port):  Make sure all output is
	sent to the given port.  Thanks to I. N. Golubev for the patch.

2000-01-12  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_DIST): Added "guile.m4".

1999-10-05  Jim Blandy  <jimb@savonarola.red-bean.com>

	* guile.m4: Moved here from top-level directory; see the ChangeLog
	entry there.
	* Makefile.am (aclocaldir, aclocal_DATA): New variables, ensuring
	that guile.m4 gets installed.

	* Makefile.in: Deleted from CVS repository.  Run the autogen.sh
	script to create generated files like this one.

1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	* Makefile.in: Regenerated.

1998-07-29  Marius Vollmer  <mvo@zagadka.ping.de>

	* guile-config.in (build-link): Correct non-RnRS usage of internal
	defines.

1999-04-17  Jim Blandy  <jimb@savonarola.red-bean.com>

	* Makefile.in: Regenerated.

1998-10-19  Jim Blandy  <jimb@zwingli.cygnus.com>

	* COPYING: New file.
	* Makefile.in: Regenerated.

1998-10-09  Jim Blandy  <jimb@zwingli.cygnus.com>

	* guile-config.in: Add copyright notice.

1998-10-07  Jim Blandy  <jimb@zwingli.cygnus.com>

	* guile-config.in (build-link): It isn't.  Revert the change.

	* guile-config.in (build-link): Include a -R flag in the output
	from link.  Not sure if this is the right thing to do.

1998-10-05  Jim Blandy  <jimb@zwingli.cygnus.com>

	* guile-config.in (build-compile, help-compile, usage-compile):
	New functions to implement new subcommand.

	* guile-config.in: Redo the help system, so that each subcommand
	defines its own usage text, as well as its help text.

	* guile-config.in (build-link): Include a -L option in the output
	from `guile-config link', indicating where libguile was installed.
	(Thanks to Greg Troxel.)

1998-10-03  Jim Blandy  <jimb@zwingli.cygnus.com>

	* guile-config.in: Don't import ice-9 regex; that's not available
	on all systems.  Maybe someday we'll have our own...